--- a/atv00/atv-flex-box/index.html
+++ b/atv00/atv-flex-box/index.html
@@ -36,11 +36,19 @@
             padding: 10px;
             background-color: rgb(190, 190, 190);
         }
-        ul{
+        .main > .navbar > ul{
             list-style-type: none;
+        }
+        li a{
+            text-decoration: none;
         }
         .content{
             flex:3;
+        }
+        footer{
+            height: 50px;
+            font-weight:bold;
+            font-size: 1.3rem;
         }
 
     </style>
@@ -68,7 +76,7 @@
         </div>
     </section>
     <footer>
-        <h1>footer</h1>
+        Footer
     </footer>
 </body>
 </html>
