--- a/Aulas/aula01/intro.html
+++ b/Aulas/aula01/intro.html
@@ -12,8 +12,7 @@
     <br />
     <strong> teste teste teste teste</strong>
     <p>
-        dj rogerin linguiça de feijão queimado
-        roubaram meu siiiiite
+        teste teste teste
     </p>
 
 </body>
