--- a/atvExtras/flexbox-layout/flexbox-layout.html
+++ b/atvExtras/flexbox-layout/flexbox-layout.html
@@ -12,7 +12,7 @@
             <div>
                 <h1>My WebSite</h1>
                 <br />
-                <p>whith a <b>flexible</b> layout</p>        
+                <p>whith a <strong>flexible</strong> layout</p>        
             </div>
         </div>
         <nav>
